tests/ui/pinned_buffered_unpin_fail.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/pinned_buffered_unpin_fail.rs:11:39
   |
11 |     let _ = std::pin::Pin::into_inner(pinned); // fails
   |             ------------------------- ^^^^^^ the trait `Unpin` is not implemented for `Buffered<'_, PhantomPinned>`
   |             |
   |             required by a bound introduced by this call
   |
   = note: the trait bound `Buffered<'_, PhantomPinned>: Unpin` is not satisfied
   = note: required for `Buffered<'_, PhantomPinned>` to implement `Unpin`
note: required by a bound in `Pin::<Ptr>::into_inner`
  --> $RUST/core/src/pin.rs
   |
   | impl<Ptr: Deref<Target: Unpin>> Pin<Ptr> {
   |                         ^^^^^ required by this bound in `Pin::<Ptr>::into_inner`
...
   |     pub const fn into_inner(pin: Pin<Ptr>) -> Ptr {
   |                  ---------- required by a bound in this associated function
help: consider borrowing here
   |
11 |     let _ = std::pin::Pin::into_inner(&pinned); // fails
   |                                       +
11 |     let _ = std::pin::Pin::into_inner(&mut pinned); // fails
   |                                       ++++
